--- a/index.html
+++ b/index.html
@@ -675,6 +675,7 @@
                     <h6 class="category">web Design</h6>
                   </div>
                 </div>
+                <!-- kkkk -->
                 <h3 class="card-title">
                   <a href="blog-single.html">See more ideas...</a>
                 </h3>
