--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                       <h2 class="w-title">Digital Agency</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Web Developer</span> /
-                        <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-date">20 Feb. 2024</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -632,7 +632,7 @@
                     src="img/m (1).jpg"
                     alt=""
                     class="rounded-circle b-shadow-a" />
-                  <span class="author">Nicole Anderson</span>
+                  <span class="author">MARIAM SULEIMAN</span>
                 </div>
                 <div class="content-test">
                   <p class="description lead">
@@ -680,9 +680,7 @@
                   <a href="blog-single.html">See more ideas...</a>
                 </h3>
                 <p class="card-description">
-                  Proin eget tortor risus. Pellentesque in ipsum id orci porta
-                  dapibus. Praesent sapien massa, convallis a pellentesque nec,
-                  egestas non nisi.
+                 we started exploring new tools to make an immersive experience, and before we knew it, we were hooked on creating a retro,...
                 </p>
               </div>
               <div class="card-footer">
@@ -715,12 +713,10 @@
                   </div>
                 </div>
                 <h3 class="card-title">
-                  <a href="blog-single.html">See more ideas about Travel</a>
+                  <a href="blog-single.html">See more...</a>
                 </h3>
                 <p class="card-description">
-                  Proin eget tortor risus. Pellentesque in ipsum id orci porta
-                  dapibus. Praesent sapien massa, convallis a pellentesque nec,
-                  egestas non nisi.
+                  Meet the nominees for Site of the Month December , vote and tweet for your favorite.
                 </p>
               </div>
               <div class="card-footer">
@@ -756,9 +752,7 @@
                   <a href="blog-single.html">See more ideas about Travel</a>
                 </h3>
                 <p class="card-description">
-                  Proin eget tortor risus. Pellentesque in ipsum id orci porta
-                  dapibus. Praesent sapien massa, convallis a pellentesque nec,
-                  egestas non nisi.
+                  The website we developed for them transcends a mere showcase of projects; an immersion into the creativity and technological excellence of the...
                 </p>
               </div>
               <div class="card-footer">
