--- a/index.html
+++ b/index.html
@@ -142,17 +142,17 @@
                     <p class="title-s"><h4>Skills & Tools</h4></p>
                     <div class="skill-o">
                       <img
-                        src="/img/html-removebg-preview.png"
+                        src="./img/html-removebg-preview.png"
                         alt="github image"
                         style="width: 70px; height: 40px" /><img
-                        src="/img/css-removebg-preview.png"
+                        src="./img/css-removebg-preview.png"
                         alt="github image"
                         style="width: 100px; height: 60px" /><img
-                        src="/img/bootstrap-logo-shadow-removebg-preview.png"
+                        src="./img/bootstrap-logo-shadow-removebg-preview.png"
                         alt="github image"
                         style="width: 70px; height: 40px" />
                         <img
-                        src="/img/Javascript-removebg-preview.png"
+                        src="./img/Javascript-removebg-preview.png"
                         alt="github image"
                         style="width: 40px; height: 40px" id="JavaScript" /> 
 
@@ -165,19 +165,19 @@
                     
                    <div class="skill-o">
                       <img
-                        src="/img/SASS-removebg-preview.png"
+                        src="./img/SASS-removebg-preview.png"
                         alt="github image"
                         style="width: 70px; height: 40px" /><img
-                        src="/img/Git_icon.svg-removebg-preview.png"
+                        src="./img/Git_icon.svg-removebg-preview.png"
                         alt="github image"
                         style="width: 70px; height: 40px" /><img
-                        src="/img/react-removebg-preview.png"
+                        src="./img/react-removebg-preview.png"
                         alt="github image"
                         style="width: 70px; height: 40px" /><img
-                        src="/img/github-icon-removebg-preview.png"
+                        src="./img/github-icon-removebg-preview.png"
                         alt="github image"
                         style="width: 70px; height: 40px" /><img
-                        src="/img/vscode-removebg-preview.png"
+                        src="./img/vscode-removebg-preview.png"
                         alt="github image"
                         style="width: 70px; height: 40px" />
 
